Thu Feb 13 14:17:00 1997  Richard Basch  <basch@lehman.com>

	* get_in_tkt.c (krb5_get_in_tkt): Initialize as_reply; if
		krb5_os_localaddr() returns an error, the cleanup
		routine may try to free a garbage pointer (as_reply).

Wed Feb 12 20:47:30 1997  Tom Yu  <tlyu@mit.edu>

	* fwd_tgt.c (krb5_fwd_tgt_creds): Use the client's realm rather
		than the server's realm for constructing the tgs principal.
		Remove TC_MATCH_SRV_NAMEONLY from call to retrieve_cred()
		because we want to get an exact match.

Mon Feb 10 10:41:36 1997  Ezra Peisach  <epeisach@mit.edu>

	* crypto_glue.c (krb5_calculate_checksum): Add krb5_const to
	        krb5_pointer of in data to match prototype.

Sat Feb  8 15:02:39 1997  Richard Basch  <basch@lehman.com>

	* get_creds.c:
		Export krb5_get_credentials_{renew,validate} (win32)
		Removed unused variable.

Fri Feb  7 09:41:33 1997  Richard Basch  <basch@lehman.com>

	* mk_cred.c (krb5_mk_ncred): Declare ncred as krb5_int32 so that
		the right value is pushed onto the stack when calling
		krb5_mk_ncred_basic()

	* copy_addrs.c fwd_tgt.c mk_cred.c:
		Use FAR keyword in pointer declarations.

	* sendauth.c (krb5_sendauth): Do not free the credentials if they
		are being returned to the caller [krb5-libs/357]

Sun Feb  2 20:57:15 1997  Richard Basch  <basch@lehman.com>

	* serialize.c: Added FAR declarations to pointer arguments for
		all functions declared as KRB5_DLLIMP.

Thu Jan 30 21:44:37 1997  Richard Basch  <basch@lehman.com>

	* crypto_glue.c:
		Export more crypto-layer functions:
		krb5_encrypt, krb5_decrypt, krb5_eblock_enctype,
		krb5_process_key, krb5_finish_key, krb5_string_to_key,
		krb5_init_random_key, krb5_finish_random_key, krb5_random_key

Sat Feb  8 18:41:42 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Thu Jan  2 17:16:18 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new library build procedure.
